0.9.43
- Add DBID icons to 1136 person info

0.9.42
- REQUIRES: plugin.video.themoviedb.helper
- Remove extendedinfo and replace with TMDbHelper
- Extra info on people/videos using TMDbHelper in skin windows
- Allows for moving through both online and local file infos
- Fix separator errors
- Fix top250 not disabling
- Add Image viewer for persons
- Add TMDb Helper support to OSD button
- Re-arrange some lists
- Add new discover calls for cast features

0.9.41
- Updates to infoline label handling
- Fix small landscape scrollbar/alphabet
- Fix aspectratio on square widget
- Fix season 2 info getting locked due to duplicate id
- Add episode labels
- Sort sets in info by year
- Codec flag fixes

0.9.40
- Updates to landscape widget (now 4 horizontal with labels underneath)
- Updates to search menu (now completely customisable)
- Fix Similar tvshows
- Palette choice thanks to drinferno

0.9.39
- Match PVR Info with other info dialogs

0.9.38
- Re-add extended info button in osd
- Fix for single PVR info in multiwidget layout
- Option for numeric star rating
- Manage art/info menu in dialogvideoinfo
- Ken burns effect option

0.9.37
- Add fake landscape icon to Icon Wall view for square icons
- Preliminary Sets Info addition
- Fix for icon widgets stretching

0.9.36
- Fix for long season numbers
- Add 8 row simple list for pvr
- Add button id 10 for pvr info
- Set Roboto as default plotbox font
- Add linespacing variant for Roboto plot
- Fix for autovis

0.9.35
- Theme switcher between light and dark depending on time of day (Light 6am - Dark 6pm)
- Slightly increase pvr osd opacity
- Don't show pvr plot box if unavailable
- Option to disable geometric panels
- Add search button to fixed width 
- Slower blur transition

0.9.34
- New PVR osd info / controls
- New PVR osd guide
- New PVR channel switcher
- Change default setting to use standard labels for add-ons
- Change default setting to use pvr icons without colordiffuse

0.9.33